feat: implementa tela de successo

--- a/src/app/shared/components/card-guia-public/card-guia-public.component.html
+++ b/src/app/shared/components/card-guia-public/card-guia-public.component.html
@@ -1,5 +1,6 @@
 <div class="card-guia">
-  <i [ngClass]="icon"></i>
-  <h3>{{ title }}</h3>
+  <!-- <i [ngClass]="icon"></i> -->
+  <img [src]="icon" alt="">
+  <h3><strong>{{ title }}</strong></h3>
   <p>{{ description }}</p>
 </div>
