--- a/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.html
+++ b/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <mat-divider style="margin-bottom: 1rem"></mat-divider>
   <p>© 2024
-    <a href="#">zodiarium</a>.
+    <a href="#">Zodiarium</a>.
     |
     <a href="https://zodiarium.com:3000/privacy-policies">Politicas de privacidade</a>
     |
