--- a/src/app/shared/components/card-guia-public/card-guia-public.component.scss
+++ b/src/app/shared/components/card-guia-public/card-guia-public.component.scss
@@ -21,15 +21,19 @@
     color: $primary-color;
   }
 
+  img{
+    height: 35px;
+  }
+
   h3 {
-    font-size: 1.5rem;
-    color: #333;
+    font-size: 1.2rem;
+    color: #000000;
     margin: 0;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   }
 
   p {
-    font-size: 1rem;
-    color: #666;
-    text-align: justify;
+    font-size: 0.9rem;
+    color: #000000;
   }
 }
