--- a/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.scss
+++ b/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.scss
@@ -1,8 +1,11 @@
 @import "variables";
 
 footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-
+  height: 20px;
   p {
     text-align: center;
     font-size: 1.1rem;
