--- a/src/app/views/private/setting/setting/setting.component.html
+++ b/src/app/views/private/setting/setting/setting.component.html
@@ -37,7 +37,7 @@
         </mat-form-field>
       </div>
 
-      <div class="col-12">
+      <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>Email da companhia</mat-label>
           <input matInput type="email" formControlName="company_email" pattern="{{ utils.patternEmail }}">
@@ -55,7 +55,7 @@
         </mat-form-field>
       </div>
 
-      <div class="col-md-6 col-12 mb-2">
+      <!-- <div class="col-md-6 col-12 mb-2">
         <mat-form-field appearance="outline">
           <mat-label>Tema</mat-label>
           <mat-select formControlName="theme" placeholder="Status">
@@ -64,7 +64,7 @@
             }
           </mat-select>
         </mat-form-field>
-      </div>
+      </div> -->
 
       <div class="col-12">
         <mat-form-field appearance="outline">
@@ -94,8 +94,15 @@
         </mat-form-field>
       </div>
 
+      <div class="col-12">
+        <mat-form-field appearance="outline">
+          <mat-label>Tags da página de vendas</mat-label>
+          <textarea cols="30" matInput formControlName="tags"></textarea>
+        </mat-form-field>
+      </div>
+
     </div>
     <div class="d-flex flex-row-reverse">
       <button matRipple id="submit" class="button button-color" (click)="onSubmit(form)">Salvar</button>
     </div>
-  </form>
+</form>
