--- a/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.scss
+++ b/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.scss
@@ -5,7 +5,8 @@ footer {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 20px;
+  height: auto;
+  background-color: transparent;
   p {
     text-align: center;
     font-size: 1.1rem;
