feat: implementa detalhes em relatório gratuito

--- a/src/app/views/public/report/report/report.component.scss
+++ b/src/app/views/public/report/report/report.component.scss
@@ -1,6 +1,14 @@
+.overflow{
+  overflow-y: hidden;
+}
+
 .loading {
     height: 100%;
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999999;
     
     flex-direction: column;    
     display: flex;
@@ -18,6 +26,27 @@
         max-width: 500px;
         animation: spin 0s linear infinite;
     }
+  }
+
+  .more-details{
+    & >div{
+      margin-bottom: 30px;
+      padding: 20px;
+
+      img{
+        width: 200px;
+        margin: 0 auto;
+      }
+      p{
+        text-align:justify;
+      }
+      h2{
+        color: #691aa7;
+        font-size: 3rem;
+        font-weight: 600;
+      }
+    }
+   
   }
   
 
