--- a/src/app/views/public/success/success/success.component.html
+++ b/src/app/views/public/success/success/success.component.html
@@ -2,7 +2,7 @@
     <div class="icon">
         <i class="fa-regular fa-circle-check"></i>
     </div>
-    <h1>Pagamento processado </h1>
+    <h1>Pagamento Recebido </h1>
 
     <div class="cards mt-3">
 
@@ -12,10 +12,10 @@
           <div class="card-body">
             <h4 class="card-title">
                 <i class="fa-solid fa-envelope"></i>
-                Recebimento
+                Entrega
             </h4>
             <h6 class="card-subtitle text-muted">
-                Você irá receber seu relatório por email em breve.
+              A entrega será efetuada através de email dentro de alguns minutos, em caso de dificuldade verifique a sua caixa de Spam. 
             </h6>
           </div>
         </div>
@@ -27,7 +27,7 @@
                 Download
             </h4>
               <h6 class="card-subtitle text-muted">
-                Recomendamos que faça download do seu relatório.
+                Recomendamos que faça download do seu Mapa Astral deste modo poderá consulta-lo em qualquer local.
             </h6>
             </div>
         </div>
@@ -39,7 +39,9 @@
                 Agradecimento
               </h4>
               <h6 class="card-subtitle text-muted">
-                Muito obrigado por compra conosco.
+                Agradecemos a sua preferência e confiança, em caso de dúvidas estaremos disponíveis através do email
+                <a href="mailto:contacto@zodiarium.com">{{ 'contacto@zodiarium.com' }}</a>  ou pelo nosso WhatsApp:
+                <a href="wa.me/+351916785683">+351916785683</a>
             </h6>
             </div>
         </div>
