--- a/src/app/views/private/lead/lead/lead.component.html
+++ b/src/app/views/private/lead/lead/lead.component.html
@@ -2,7 +2,7 @@
   <div id="componentHeader">
       <div id="buttons">
         <button matRipple class="button" (click)="export()">
-          <i class="fa-solid fa-file-export"></i> Exportar PDF
+          <i class="fa-solid fa-file-export"></i> Exportar
         </button>
     </div>
   </div>
