--- a/src/app/views/private/generate/generate/generate.component.html
+++ b/src/app/views/private/generate/generate/generate.component.html
@@ -1,5 +1,12 @@
+<button
+class="btn btn-primary"
+(click)="goToAll()"
+>
+  Ver relatórios gerados
+</button>
 
-<form [formGroup]="form">
+
+<form [formGroup]="form" class="mt-3">
     <div class="row">
 
         <div class="col-md-6 mb-2">
